--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -6,14 +6,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".RecoverPasswordActivity">
+    tools:context=".view.RecoverPasswordActivity">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar_item" />
 
     <TextView
         android:id="@+id/txv_recover_password_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="70dp"
         android:text="@string/text_recover_password_title"
         android:textSize="20sp"
         android:textStyle="bold"
