--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".view.RecoverPasswordActivity">
+    tools:context=".view.activity.RecoverPasswordActivity">
 
     <include
         android:id="@+id/toolbar"
