--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -45,7 +45,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txv_twitter_login_title">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edt_username"
+            android:id="@+id/tiet_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
@@ -67,7 +67,7 @@
         app:layout_constraintTop_toBottomOf="@+id/til_user">
 
         <android.support.design.widget.TextInputEditText
-            android:id="@+id/edt_password"
+            android:id="@+id/tiet_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
