--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -9,7 +9,9 @@
 
     <include
         android:id="@+id/toolbar"
-        layout="@layout/toolbar_item" />
+        layout="@layout/toolbar_item"
+        tools:layout_editor_absoluteX="27dp"
+        tools:layout_editor_absoluteY="303dp" />
 
     <TextView
         android:id="@+id/txv_title_create_account"
@@ -25,30 +27,73 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/edt_user_name"
+    <!-- User Field -->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="50dp"
-        android:hint="@string/text_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txv_title_create_account" />
+        app:layout_constraintTop_toBottomOf="@+id/txv_title_create_account"
+        android:hint="@string/text_name">
 
-    <EditText
-        android:id="@+id/edt_password"
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tiet_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <!-- Eamil Field -->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
-        android:hint="@string/text_password"
+        android:layout_marginTop="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_user_name" />
+        app:layout_constraintTop_toBottomOf="@+id/til_username"
+        android:hint="@string/text_email">
 
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tiet_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"/>
+
+    </android.support.design.widget.TextInputLayout>
+
+    <!-- Password Field -->
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/til_password_ca"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:hint="@string/text_password"
+        app:passwordToggleEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/til_email">
+
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/tiet_password_ca"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <!-- Button Field -->
     <Button
         android:id="@+id/btn_sign_up_account"
         android:layout_width="match_parent"
@@ -61,6 +106,6 @@
         android:textColor="@color/colorWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_password" />
+        app:layout_constraintTop_toBottomOf="@+id/til_password_ca" />
 
 </android.support.constraint.ConstraintLayout>
