--- a/app/src/main/res/layout/activity_recover_password.xml
+++ b/app/src/main/res/layout/activity_recover_password.xml
@@ -30,12 +30,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
-        android:text="Enter your email, phone number, or username."
+        android:text="@string/text_enter_email"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txv_recover_password_title" />
 
     <EditText
-        android:id="@+id/edt_enter_password"
+        android:id="@+id/edt_enter_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
@@ -46,13 +46,15 @@
         app:layout_constraintTop_toBottomOf="@+id/txv_password_subtitle" />
 
     <Button
+        android:id="@+id/btn_resetPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:background="@color/colorPrimary"
         android:text="Search"
+        android:textColor="@color/colorWhite"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/edt_enter_password" />
+        app:layout_constraintTop_toBottomOf="@+id/edt_enter_email" />
 
 </android.support.constraint.ConstraintLayout>
