--- a/app/src/main/res/layout/toolbar_item.xml
+++ b/app/src/main/res/layout/toolbar_item.xml
@@ -3,8 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="?attr/actionBarSize"
-    android:background="@color/colorWhite"
+    android:layout_height="?android:attr/actionBarSize"
+    android:background="@color/colorPrimary"
     android:theme="@android:style/Theme.Material"
     android:translationZ="4dp" >
 
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20sp"
-        android:textColor="@color/colorBlack"
+        android:textColor="@color/colorWhite"
         android:layout_marginLeft="10dp"
         android:textStyle="bold"/>
 
