--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -4,7 +4,7 @@
     <item
         android:id="@+id/followers"
         android:icon="@drawable/ic_launcher_foreground"
-        android:title="@string/text_tweet"
+        android:title="@string/text_followers"
         />
 
     <item
